<resources>
    <string name="app_name">AdminWaveOfFood</string>
    <string name="waves_of_food">Food Delivery App</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="login_to_your_account">login_account</string>
    <string name="wave_of_food">wave_food</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue With</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t Have Account</string>
    <string name="shamshir">Design By\nShamshir</string>
    <string name="login_to_your_nadmin_dashboard">Login To Your\nAdmin Dashboard</string>
    <string name="passwords">Password</string>
    <string name="adming_dashboard">Sign Up Here For Your\nAdmin Dashboard</string>
    <string name="choose_location">Choose Location</string>
    <string name="email_or_phone_number">Email Or Phone Number</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="create_account">Create Account</string>
    <string name="all_item_menu">All Item Menu</string>
    <string name="profile">Profile</string>
    <string name="select_image">Select Image</string>
    <string name="short_description">Short Description</string>
    <string name="more_text">Currently, growth of mobile apps across\nindustries like e-commerce, healthcare, fintech, and education.</string>
    <string name="noodle_salad_nburger_herbal_npan_cake_nmomos">Noodle Salad\nBurger Herbal\nPan Cake\nMomos</string>
    <string name="spicy_fresh_crab">Spicy fresh crab</string>
    <string name="all_item">All Item</string>
    <string name="_1">1</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="textview_gmail_com">TextView@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="save_information">Save Information</string>
    <string name="create_new_user_admin">Create New User Admin</string>
    <string name="email_or_phone_numbers">Email or Phone Number</string>
    <string name="create_new_user">Create New User</string>
    <string name="quantity">Quantity</string>
    <string name="_8">8</string>
    <string name="accept">Accept</string>
    <string name="name_customer">Name Customer</string>
    <string name="name_of_owner">Name Of Owner</string>
    <string name="name_of_restorent">Name Of Restorent</string>
    <string name="facebook">Facebook</string>
    <string name="ingredient">Ingredients</string>
    <string name="add_item">Add Item</string>
    <string name="add_here_description">Add Here Description</string>
    <string name="add_here_ingredients">Add Here Ingredients</string>
    <string name="edit">edit</string>
    <string name="edits">Edit</string>
    <string name="order_details">Order Details</string>
    <string name="_10">10$</string>
    <string name="total_pay">Total Pay</string>
    <string name="manageBanners">Manage Banners</string>
    <string name="promotionalBanners">Add and update promotional banners.</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="foodCategories">Create and organize food categories</string>
    <string name="manageFoodItems">Manage Food Items</string>
    <string name="addAndEditItems">Add and edit menu items</string>
    <string name="dashboard">Dashboard</string>
    <string name="enter_food_price">Enter Food Price</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="upload_image">Upload Image</string>
    <string name="save_category">Save Category</string>
    <string name="update_category">Update Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders">Orders</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="edit_restaurant"><![CDATA[Edit restaurant details, timing & status]]></string>
    <string name="manage_restaurant">Manage Restaurant</string>
    <string name="pizza">Pizza</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="opening_time">Opening time</string>
    <string name="closing_time">Closing time</string>
    <string name="delivery_radius">Delivery Radius</string>
    <string name="open">Open</string>
    <string name="status">Status : </string>
    <string name="save_changes">Save Changes</string>
    <string name="upload">Upload</string>
    <string name="delivery_duration">Delivery Duration</string>
    <string name="manage_food_items">Manage Food Items</string>
    <string name="add_new_item">Add New Item</string>
    <string name="food_title">Food Title</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="fast_food">Fast Food</string>
    <string name="italian">Italian</string>
    <string name="food_name">Food Name</string>
    <string name="_299">299</string>
    <string name="currency">₹</string>
    <string name="new_orders">New Orders</string>
    <string name="order_history">Order History</string>
    <string name="sales_overview">Sales Overview</string>
    <string name="food_description">Food Description</string>
    <string name="food_price">Food Price</string>
    <string name="food_names">Food Name</string>
    <string name="change_image">Change Image</string>


</resources>
