<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/adming_dashboard"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/lato_bold" />


    <EditText
        android:id="@+id/restaurantName"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/home_icon"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/name_of_restorent"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/emailOrPhone"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/mail_icon"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:fontFamily="@font/lato"
        android:hint="@string/email_or_phone_number"
        android:paddingLeft="15dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/restaurantName"
        app:layout_constraintStart_toStartOf="@+id/restaurantName"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/lock_icon"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:fontFamily="@font/lato"
        android:hint="@string/passwords"
        android:paddingLeft="15dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailOrPhone"
        app:layout_constraintStart_toStartOf="@+id/emailOrPhone"
        app:layout_constraintTop_toBottomOf="@+id/emailOrPhone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createUserButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/greenbuttongradient"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:fontFamily="@font/lato_bold" />

    <TextView
        android:id="@+id/alreadyHaveAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/createUserButton"
        app:layout_constraintStart_toStartOf="@+id/createUserButton"
        app:layout_constraintTop_toBottomOf="@+id/createUserButton"/>


    <EditText
        android:id="@+id/name"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/user_new"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/name_of_owner"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>